--- a/.github/workflows/module-update.yml
+++ b/.github/workflows/module-update.yml
@@ -98,7 +98,8 @@ jobs:
 
     - name: Push changes and tags
       run: |
-        git push --tags
+        # Push both the commit and the tags to the master branch
         git push origin master
+        git push origin master --tags
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
