--- a/.github/workflows/module-update.yml
+++ b/.github/workflows/module-update.yml
@@ -3,7 +3,7 @@ name: Check and udpate Ingress-Nginx Helm chart version
 
 on:
   schedule:
-    - cron: '*/10 * * * *'
+    - cron: '0 9 * * 1'
 
 # on:
 #   pull_request:
